# robdesstamp_2022

./: CMakeLists.txt  Fixed_motion_temporary.py  README.md  hand.py  hand_another.py  main_motion.py  main_motion_another.py  package.xml  typescript
launch/: main.launch
scripts/: Fixed_motion_temporary.py  README.md  hand.py  main_motion.py  main_process.py
scripts/launch/: main.launch
scripts/~/Downloads/: landmark.csv
