<?xml version="1.0"?>
<package format="2">
  <name>robdesstamp_2022</name>
  <version>0.0.0</version>
  <description>robdesstamp_2022 package</description>

  <maintainer email="msaku3909@gmail.com">Yusaku Matsuyama</maintainer>
  <maintainer email="hase.hiro777@ezweb.ne.jp">Hiroki Hasegawa</maintainer>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
